<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="LinearLayout"
    android:orientation="vertical"
    android:background="@drawable/bg_list_permission"
    android:paddingTop="12dp"
    android:paddingBottom="16dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Text.Header_4"
        android:text="@string/allow_access"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Text.Subtitle_1"
        android:text="@string/allow_access_description"
        android:textColor="@color/gray"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:id="@+id/allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Text.Header_5"
        android:text="@string/allow"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:gravity="end" />


</merge>